--- a/hrd_app/templates/hrd_app/base.html
+++ b/hrd_app/templates/hrd_app/base.html
@@ -53,8 +53,13 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="btn btn-outline-danger btn-sm px-4 rounded-pill" href="{% url 'logout' %}">
-                            Keluar <i class="fas fa-sign-out-alt ms-1"></i>
+                        <a class="nav-link px-3" href="{% url 'ganti_password' %}">
+                            <i class="fas fa-key me-1"></i> Ganti Password
+                        </a>
+                    </li>
+                    <li class="nav-item ms-lg-3">
+                        <a class="btn btn-outline-danger px-4 rounded-pill shadow-sm" href="{% url 'logout' %}">
+                            <i class="fas fa-sign-out-alt me-1"></i> Keluar
                         </a>
                     </li>
                     {% else %}
